=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 v2.004

=over

=item *

In t/cgi.t, fixed addon v2 compat bug. [Bodo Schulze]

=item *

Upgraded to HTML::Template::Expr v0.06 - now with chained binary
operators! [Sam]

=item *

In Krang::Story, fixed addon v2 compatibility bug in find(). [Bodo
Schulze]

=item *

In Krang::History, replaced constants FIELDS, OBJECT_TYPES AND ACTIONS
with methods fields(), object_types() and actions()
respectively. [Bodo Schulze]

=item *

Allow multiple word action names in admin scheduler. [Bodo Schulze]

=item *

In admin contrib list view, made type column sortable. [Bodo Schulze]

=item *

For Krang::History, allow Krang::Story, Krang::Media and
Krang::Template to be overlayed with addon modules. [Bodo Schulze]

=item *

Added documentation for Krang::Widget::template_chooser() and cleaned
up template_chooser code. [Bodo Schulze]

=item *

Added tests for scalar methods admin_categories_ftp and admin_lists to
t/group.t [Bodo Schulze]

=item *

Added new primitive, Krang::ElementClass::CheckBoxGroup, 
which integrates with Krang's lists system, in addition
to permitting simple values.  [Jesse Erlbaum]

=item *

Added new option "--makecats" to krang_upload_media and 
krang_upload_templates.  When specified, missing categories
will be created in the CMS, instead of skipped.  [Jesse Erlbaum]

=item *

Fixed bug in Krang::ElementClass::ListGroup and Krang::ElementClass::RadioGroup 
such that associated ListItems will now be automatically added to the 
DataSet.  [Jesse Erlbaum]

=item *

Fixed bug in Krang::ElementClass::Date where date would change if KDS
was exported from a machine in one time zone and imported on a machine
in an earlier time zone.  [Jesse Erlbaum]

=back


=head2 v2.003

=over

=item *

Fixed sql/mypref.sql so that user's don't clobber each others
preferences. [Bodo Schulze]

=item *

Added missing setting of template param 'parent_path' to